Feat: added sticky cup animation!

--- a/index.html
+++ b/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <title>Rats!</title>
 
     <link rel="stylesheet" type="text/css" href="assets/code/styles.css" />
 </head>
-<body>
-<div class="cheese-conveyor">
-    <div class="conveyor-track">
-        <img src="assets/images/cheese-conveyor.png" alt="cheese">
-        <img src="assets/images/cheese-conveyor.png" alt="cheese">
-        <img src="assets/images/cheese-conveyor.png" alt="cheese">
-        <img src="assets/images/cheese-conveyor.png" alt="cheese">
-    </div>
-</div>
-</div>
 
-    <div class="title"><h1>RATS!</h1></div>
+<body>
+    <div class="home">
+    <button class="btn">Try It Yourself!</button>
+    <div class="title">
+        <h1>RATS!</h1>
+        <p>A title font where letters take on rat-forms.</p>
+    </div>
+    <div class="cheese-conveyor">
+        <div class="conveyor-track">
+            <img src="assets/images/cheese-conveyor.png" alt="cheese">
+            <img src="assets/images/cheese-conveyor.png" alt="cheese">
+            <img src="assets/images/cheese-conveyor.png" alt="cheese">
+            <img src="assets/images/cheese-conveyor.png" alt="cheese">
+        </div>
+    </div>
+    </div>
+
+    <div class="blue-triangle1"></div>
+    <div class="blue-triangle2"></div>
+
+    <div class="content">
+    <div class="mouse-trap">
+    <img src="assets/images/rectangle.png" alt="trap base" class="trap-base">
+    <img src="assets/images/cup.png" alt="cup" class="trap-cup">
+    <img src="assets/images/mouse.png" alt="mouse" class="trap-mouse">
+    </div>
+    <div class="info">
+        <div class="text">
+            <h2 class="auto-color">GAMES</h2>
+            <p class="auto-color">One source of inspiration was the hit 2000s game <span style="font-style: italic;">"Mouse Trap"</span>. Its retro vibe makes it perfect for video games.</p>
+        </div>
+        <div class="img-container"><img src="assets/images/mouse-trap.png" alt="Mouse Trap game from 2000s"></div>
+        <div class="text">
+            <h2 class="auto-color">MOVIES</h2>
+            <p class="auto-color">Another inspiration was everyone's favorite rat movie, <span style="font-style: italic;">Ratatouille</span>. This font could also be used for movie posters and marketing campaigns. </p>
+        </div>
+        <div class="img-container"><img src="assets/images/movie-poster.jpg" style="height: 45vh;"   alt="Pixar Ratatouille Movie Poster"></div>
+    </div>
+    </div>
+
+
 </body>
+
 </html>
