Feat: added favicon!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rats!</title>
 
     <link rel="stylesheet" type="text/css" href="assets/code/styles.css" />
+    <link rel="icon" href="assets/images/favicon.png" type="image/x-icon" />
 </head>
 
 <body>
